--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,3 +50,32 @@ a, a:visited {
 a:hover {
 	color: hsla(0%, 0%, 0%, 0.5%)
 }
+
+span {
+    color: #333;
+    font-weight: 700;
+    font-size: 2em;
+	text-align: center;
+}
+
+li {
+	/* box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2); */
+    margin-bottom: 30px;
+    display: inline-block;
+	height: 180px;
+	width: 240px;
+    vertical-align: top;
+    margin: 20px;
+    text-align: center;
+	max-width: 50rem;
+}
+img {
+	height: 180px;
+	width: 240px;
+	/* background-size: cover;
+	border: solid 1px #ddd;
+	background-position: center;
+	display: inline-block;  */
+	/* max-width: 2rem; */
+
+}
