--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,8 +61,9 @@ span {
 li {
 	/* box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2); */
     margin-bottom: 30px;
+	margin-left: 200;
     display: inline-block;
-	height: 180px;
+	height: 450px;
 	width: 240px;
     vertical-align: top;
     margin: 20px;
@@ -77,5 +78,17 @@ img {
 	background-position: center;
 	display: inline-block;  */
 	/* max-width: 2rem; */
+
+}
+.story-card {
+	margin-bottom: 30px;
+	margin-left: 200;
+    display: inline-block;
+	height: 180px;
+	width: 240px;
+    vertical-align: top;
+    margin: 20px;
+    text-align: center;
+	max-width: 50rem;
 
 }
