--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,10 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300px;
+	background-image: url('images/img.jpeg');
 
 }
+
 .header {
 	max-width: 50rem;
 	margin: auto;
@@ -24,11 +26,14 @@ h1{
 	max-width: 50rem;
 	margin: auto;
 }
-.footer {
+footer {
+	font-weight: 100px;
 	max-width: 50rem;
-	margin: 2rem auto;
-	border-color: rgb(65, 64, 64);
+	margin: auto;
+	text-align: center;
+	border-color: rgb(52, 50, 50);
 }
+
 hr {
 	max-width: 60rem;
 	margin: auto;
@@ -49,4 +54,46 @@ a, a:visited {
 }
 a:hover {
 	color: hsla(0%, 0%, 0%, 0.5%)
+}
+
+span {
+    color: #333;
+    font-weight: 700;
+    font-size: 2em;
+	text-align: center;
+}
+
+li {
+	/* box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2); */
+    margin-bottom: 30px;
+	margin-left: 200;
+    display: inline-block;
+	height: 450px;
+	width: 240px;
+    vertical-align: top;
+    margin: 20px;
+    text-align: center;
+	max-width: 50rem;
+}
+img {
+	height: 180px;
+	width: 240px;
+	/* background-size: cover;
+	border: solid 1px #ddd;
+	background-position: center;
+	display: inline-block;  */
+	/* max-width: 2rem; */
+
+}
+.story-card {
+	margin-bottom: 30px;
+	margin-left: 200;
+    display: inline-block;
+	height: 180px;
+	width: 240px;
+    vertical-align: top;
+    margin: 20px;
+    text-align: center;
+	max-width: 50rem;
+
 }
