--- a/brutality-typology/styles.css
+++ b/brutality-typology/styles.css
@@ -26,9 +26,7 @@ h2 {
     text-align: center;
     opacity: 100%;
 }
-/* h4 {
-margin-bottom: 0px;
-} */
+
 .story {
 	display: flex;
 	justify-content: center;
@@ -97,7 +95,8 @@ p {
 	opacity: 100%;
     font-weight: 300;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 5px;
+	line-height: 1.1em;
 }
 .title p {
 	line-height: 1em;
@@ -151,11 +150,11 @@ p {
 	background-color: #fff;
 	opacity: 70%;
 	border-radius: 1em;
-	top: 65em;
+	top: 63em;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font: .8em/.9em 'Open Sans', sans-serif;
 	line-height: 2em;
-	padding: 1em 6em 30em;
+	padding: 1em 1em .5em;
 	position: absolute;
 	max-width: 12%;
 	margin: 0em 1em;
@@ -166,32 +165,35 @@ p {
 	opacity: 100%;
     font-weight: 300;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 5px;
+	line-height: 1.1em;
 }
 
-/* .title2 p {
-	line-height: 1em;
+.title2 p {
+	line-height: 1.2em;
 	opacity: 100%;
     padding-top: 0px;
+    padding-left: 10px;
     margin-top: .5em;
-} */
+    margin-left: 0px;
+}
 
-/* .title2 div span {
+.title2 div span {
 	border-radius: 100%;
 	display: inline-block;
 	height: 10px;
 	margin-left: 5px;
     margin-right: 5px;
 	width: 10px;
-} */
+}
 
 
-/* .title2 hr {
+.title2 hr {
 	border-top: .2em dashed #404040;
 	border-bottom: 0em;
 	margin-top: .75em;
 	margin-bottom: .20em;
-} */
+}
 
 
 
@@ -207,14 +209,14 @@ p {
 	border-radius: 50%;
 	border-style: solid;
 	border-color: black;
-	border-width: 1px;
+	border-width: .5px;
 	margin: auto;
 	display: inline-block;
-	height: 5px;
+	height: 10px;
 	margin-top: 0px;
 	margin-right: 10px;
 	margin-left: 10px;
-	width: 5px;
+	width: 10px;
 	opacity: 100%
 }
 #brutality-legend.legend2 {
