--- a/citibike/styles.css
+++ b/citibike/styles.css
@@ -44,18 +44,41 @@ p {
 
 
 #map {
-    width: 100%;
-    height: 600px;
-    margin: 5em auto;
+	height:500px;
+	width:450px;
+	background-color: gray;
+	position: relative;
+	float:left;
+	margin: 20px;
     margin-left: 30em auto;
 }
 #map2 {
-    width: 100%;
-    height: 600px;
-    margin: 5em auto;
-    /* margin-left: 30em auto; */
+	height:500px;
+	width:450px;
+	position:relative;
+	float:left;
+	margin: 20px;
+    margin-left: 30em auto;
 }
 
+#map3 {
+	height:500px;
+	width:450px;
+	background-color: gray;
+	position: relative;
+	float:left;
+	margin: 20px;
+    margin-left: 30em auto;
+}
+#map4 {
+	height:500px;
+	width:450px;
+	background-color: gray;
+	position: relative;
+	float:left;
+	margin: 20px;
+    margin-left: 30em auto;
+}
 .mapboxgl-popup-content h4 {
     font-weight: 300;
     font-size: 0.9em;
@@ -74,6 +97,14 @@ p {
     font-weight: 300;
     margin-top: 0.3em;
     margin-bottom: 0em;
+}
+
+.mapboxgl-canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+	width: 350px;
+    height: 450px;
 }
 
 .title {
@@ -226,4 +257,46 @@ p {
     right: 10px;
     z-index: 90;
     opacity: 100%
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	gap: 2em;
+}
+
+.column-container {
+	/* display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1; */
+	width: 1200px;
+	margin-right: auto;
+	margin-left: auto;
+	height: auto;
+}
+
+@media (min-width: 560px){
+	.column-container {
+	}
+
+}
+@media (max-width: 768px) {
+	#g-us_Dollar-mobile{
+		display: block;
+	}
+}
+
+div span {
+	border-radius: 50%;
+	display: inline-block;
+	height: 10px;
+	margin-right: 10px;
+	margin-left: 50px;
+	width: 10px;
+    margin-bottom: 0px;
+	opacity: .5;
+
 }
