--- a/citibike/styles.css
+++ b/citibike/styles.css
@@ -232,24 +232,8 @@ p {
 	margin: 0 0 0px;
 	opacity: 100%
 } */
-.legend2 p {
-	padding-top: 0px;
-	margin-top: 0px;
-}
-.legend2 div span {
-	border-radius: 50%;
-	border-style: solid;
-	border-color: black;
-	border-width: .5px;
-	margin: auto;
-	display: inline-block;
-	height: 10px;
-	margin-top: 0px;
-	margin-right: 10px;
-	margin-left: 10px;
-	width: 10px;
-	opacity: 100%
-}
+
+
 #brutality-legend.legend2 {
     font: 1em/1.5em 'Open Sans', sans-serif;
     padding: 1em 1em 1em 1em;
@@ -289,14 +273,44 @@ p {
 	}
 }
 
-div span {
+.title div span {
 	border-radius: 50%;
 	display: inline-block;
 	height: 10px;
 	margin-right: 10px;
-	margin-left: 50px;
+	margin-left: 10px;
 	width: 10px;
     margin-bottom: 0px;
-	opacity: .5;
-
+	opacity: 100;
 }
+
+.title {
+	background-color: #ffffff;
+	opacity: 50%;
+	border-radius: 1em;
+	top: 25em;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	font: .8em/.9em 'Open Sans', sans-serif;
+	line-height: 1.2em;
+	padding: .8em 1em 2em;
+	position: absolute;
+	max-width: 12%;
+	margin: 1em 2em;
+	z-index: 90;
+}
+
+.title2 {
+	background-color: #ffffff;
+	opacity: 50%;
+	border-radius: 1em;
+	top: 75em;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	font: .8em/.9em 'Open Sans', sans-serif;
+	line-height: 1.2em;
+	padding: 1em 1em 10em;
+	position: absolute;
+	max-width: 12%;
+	margin: 0em 2em;
+	z-index: 90;
+}
+
