--- a/citibike/styles.css
+++ b/citibike/styles.css
@@ -107,21 +107,6 @@ p {
     height: 450px;
 }
 
-.title {
-	background-color: #ffffff;
-	opacity: 70%;
-	border-radius: 1em;
-	top: 11em;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	font: .8em/.9em 'Open Sans', sans-serif;
-	line-height: 2em;
-	padding: 1em .6em 17em;
-	position: absolute;
-	max-width: 12%;
-	margin: 0em 1em;
-	z-index: 90;
-}
-
 .title h1{
 	opacity: 100%;
     font-weight: 300;
@@ -137,14 +122,7 @@ p {
     margin-top: .5em;
     margin-left: 0px;
 }
-.title div span {
-	border-radius: 30%;
-	display: inline-block;
-	height: 5px;
-	margin-left: 0px;
-    margin-right: 10px;
-	width: 5px;
-}
+
 .title hr {
 	border-top: .2em dashed #404040;
 	border-bottom: 0em;
@@ -177,21 +155,6 @@ p {
 	width: 10px;
 }
 
-.title2 {
-	background-color: #fff;
-	opacity: 70%;
-	border-radius: 1em;
-	top: 70em;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	font: .8em/.9em 'Open Sans', sans-serif;
-	line-height: 2em;
-	padding: 1em 1em .5em;
-	position: absolute;
-	max-width: 12%;
-	margin: 0em 1em;
-	z-index: 90;
-}
-
 .title2 h1{
 	opacity: 100%;
     font-weight: 300;
@@ -209,13 +172,21 @@ p {
     margin-left: 0px;
 }
 
-.title2 div span {
+#first {
 	border-radius: 100%;
 	display: inline-block;
-	height: 10px;
+	height: 3px;
 	margin-left: 5px;
     margin-right: 5px;
-	width: 10px;
+	width: 3px;
+}
+#second {
+	border-radius: 100%;
+	display: inline-block;
+	height: 40px;
+	margin-left: 5px;
+    margin-right: 5px;
+	width: 40px;
 }
 
 
@@ -276,10 +247,10 @@ p {
 .title div span {
 	border-radius: 50%;
 	display: inline-block;
-	height: 10px;
+	height: 3px;
 	margin-right: 10px;
 	margin-left: 10px;
-	width: 10px;
+	width: 3px;
     margin-bottom: 0px;
 	opacity: 100;
 }
@@ -288,11 +259,11 @@ p {
 	background-color: #ffffff;
 	opacity: 50%;
 	border-radius: 1em;
-	top: 25em;
+	top: 16em;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font: .8em/.9em 'Open Sans', sans-serif;
-	line-height: 1.2em;
-	padding: .8em 1em 2em;
+	line-height: 1.5em;
+	padding: .6em 1em 1em;
 	position: absolute;
 	max-width: 12%;
 	margin: 1em 2em;
@@ -303,14 +274,43 @@ p {
 	background-color: #ffffff;
 	opacity: 50%;
 	border-radius: 1em;
-	top: 75em;
+	top: 36em;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font: .8em/.9em 'Open Sans', sans-serif;
 	line-height: 1.2em;
-	padding: 1em 1em 10em;
+	padding: 1em 1em 2em;
+	position: absolute;
+	max-width: 80%;
+	margin: 0em 36em;
+	z-index: 90;
+}
+
+.title3 {
+	background-color: #ffffff;
+	opacity: 50%;
+	border-radius: 1em;
+	top: 73em;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	font: .8em/.9em 'Open Sans', sans-serif;
+	line-height: 1.2em;
+	padding: 1em 1em 2em;
 	position: absolute;
 	max-width: 12%;
 	margin: 0em 2em;
 	z-index: 90;
 }
 
+.title4 {
+	background-color: #ffffff;
+	opacity: 50%;
+	border-radius: 1em;
+	top: 73em;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	font: .8em/.9em 'Open Sans', sans-serif;
+	line-height: 1.2em;
+	padding: 1em 1em 2em;
+	position: absolute;
+	max-width: 80%;
+	margin: 0em 36em;
+	z-index: 90;
+}
