--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,3 +98,13 @@ img {
 	max-width: 50rem;
 
 }
+
+.story-card > li {
+	box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
+		margin-bottom: 30px;
+		display: inline-block;
+		width: 240px;
+		vertical-align: top;
+		margin: 20px;
+		text-align: center;
+}
