--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,9 +64,9 @@ span {
 	text-align: center;
 }
 
-/* li { */
-	/* box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2); */
-    /* margin-bottom: 30px;
+li {
+	box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
+   	margin-bottom: 30px;
 	margin-left: 200;
     display: inline-block;
 	height: 450px;
@@ -75,7 +75,7 @@ span {
     margin: 20px;
     text-align: center;
 	max-width: 50rem;
-} */
+}
 img {
 	height: 180px;
 	width: 240px;
@@ -97,14 +97,4 @@ img {
     text-align: center;
 	max-width: 50rem;
 
-}
-
-.story-card > li {
-		box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
-		margin-bottom: 30px;
-		display: inline-block;
-		width: 240px;
-		vertical-align: top;
-		margin: 20px;
-		text-align: center;
 }
