--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,8 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300px;
-	background-image: url('images/img.jpeg');
-
+	background-image: url("images/img.jpeg");
+	/* background-repeat: repeat-x; */
 }
 
 .header {
@@ -86,9 +86,10 @@ img {
 	/* max-width: 2rem; */
 
 }
-.story-card {
+/* div.story-card {
 	margin-bottom: 30px;
-	margin-left: 200;
+	margin-left: 50rem;
+	margin-right: 5rem;
     display: inline-block;
 	height: 180px;
 	width: 240px;
@@ -96,5 +97,11 @@ img {
     margin: 20px;
     text-align: center;
 	max-width: 50rem;
+	margin: auto;
 
-}
+} */
+
+/* 
+div {
+
+} */
