--- a/brutality-typology/styles.css
+++ b/brutality-typology/styles.css
@@ -25,6 +25,8 @@ h4 {
 h2 {
     text-align: center;
     opacity: 100%;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
 }
 /* h4 {
 margin-bottom: 0px;
@@ -50,6 +52,7 @@ p {
     height: 600px;
     margin: 5em auto;
     margin-left: 30em auto;
+
 }
 #map2 {
     width: 100%;
@@ -82,7 +85,7 @@ p {
 	background-color: #ffffff;
 	opacity: 70%;
 	border-radius: 1em;
-	top: 6em;
+	top: 12em;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font: .8em/.9em 'Open Sans', sans-serif;
 	line-height: 2em;
@@ -151,11 +154,11 @@ p {
 	background-color: #fff;
 	opacity: 70%;
 	border-radius: 1em;
-	top: 65em;
+	top: 77em;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font: .8em/.9em 'Open Sans', sans-serif;
 	line-height: 2em;
-	padding: 1em 6em 30em;
+	padding: 1em 1.2em 1em;
 	position: absolute;
 	max-width: 12%;
 	margin: 0em 1em;
@@ -203,19 +206,19 @@ p {
 	padding-top: 0px;
 	margin-top: 0px;
 }
-.legend2 div span {
+.legend2 span {
 	border-radius: 50%;
 	border-style: solid;
 	border-color: black;
-	border-width: 1px;
+	border-width: .5px;
 	margin: auto;
 	display: inline-block;
-	height: 5px;
+	height: 10px;
 	margin-top: 0px;
 	margin-right: 10px;
 	margin-left: 10px;
-	width: 5px;
-	opacity: 100%
+	width: 10px;
+	opacity: 50%
 }
 #brutality-legend.legend2 {
     font: 1em/1.5em 'Open Sans', sans-serif;
@@ -224,4 +227,10 @@ p {
     right: 10px;
     z-index: 90;
     opacity: 100%
+}
+
+em {
+	margin: 0; 
+	margin: 0px;
+	padding: 0px 5px;
 }
